src/test/ui/regions/regions-pattern-typing-issue-19552.nll.stderr
error[E0597]: `line` does not live long enough
  --> $DIR/regions-pattern-typing-issue-19552.rs:5:14
   |
LL |     match [&*line] {
   |              ^^^^ borrowed value does not live long enough
LL |         [ word ] => { assert_static(word); }
   |                       ------------------- argument requires that `line` is borrowed for `'static`
LL |     }
LL | }
   | - `line` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
